--- a/members.html
+++ b/members.html
@@ -17,9 +17,9 @@ header-img: "img/header.jpg"
 	{% if member.github %} 
 	<span class="social-share-googleplus"><a href="https://github.com/{{ member.github }}" title="Github"><img src="{{ "/img/github-icon.png" | prepend: site.baseurl }}" style="height:20px">Github</a></span> 
 	{% endif %}
-	{% if member.url %}
+	<!-- {% if member.url %}
 	<span class="social-share-googleplus"><a href="{{ member.url }}" title="Website"><img src="{{ "/img/url-icon.png"| prepend: site.baseurl }}" style="height:20px">Website</a></span>
-	{% endif %}
+	{% endif %} -->
 	
 	</br>
 
