--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ description: A Privacy-preserving Software-defined Data Center
     <li>Rapidly iterate on your Bitcoin business ideas. Deploy a new configuration in minutes.</li>
 </ul>
 
+<p>
+    <center><a target="_blank" rel="noopener noreferrer" href="https://github.com/BitcoinCacheMachine/BitcoinCacheMachine" ><img src="/img/git-2.png" height="100px"  /></a></center>
+</p>
 
 <hr />
 <h3>The Latest From The Blog</h3>
