--- a/about/index.html
+++ b/about/index.html
@@ -18,9 +18,9 @@ header-img: "img/header.jpg"
 <p>BCM is an event-driven system. When something happens, say a lightning invoice is paid, this event gets captured
     inside of a distributed Kafka cluster. You can deploy workflows against this event flow to create custom logic that
     meets your particular needs.</p>
-<center>
-    <p><img src="/img/keybase_icon.png" /></p>
-</center>
+
+    <p align="center"><img src="/img/keybase_icon.png" /></p>
+
 <p>
     Users wanting to contribute to the project may submit pull requests for review. A <a target="_blank" rel="noopener noreferrer"
         href="https://keybase.io/team/btccachemachine">Keybase
