--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ header-img: "img/header.jpg"
     inside of a distributed Kafka cluster. You can deploy workflows against this event flow to create custom logic that
     meets your particular needs.</p>
 
-    <p align="center"><img src="/img/keybase_icon.png" /></p>
+    <p  style="justify-content: center"><img src="/img/keybase_icon.png" /></p>
 
 <p>
     Users wanting to contribute to the project may submit pull requests for review. A <a target="_blank" rel="noopener noreferrer"
