--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: A Privacy-preserving Software-defined Data Center
     <li>Rapidly iterate on your Bitcoin business ideas. Deploy a new configuration in minutes.</li>
 </ul>
 
-<p align="center">
+<p  style="justify-content: center">
     <a target="_blank" rel="noopener noreferrer" href="https://github.com/BitcoinCacheMachine/BitcoinCacheMachine" ><img src="/img/git-2.png" height="100px"  /></a>
 </p>
 
