--- a/members.html
+++ b/members.html
@@ -10,24 +10,24 @@ description: "Collaborators working on this project."
 
 	<img src="{{ member.img }}" style="margin-top:0px; margin-bottom:5px; margin-right:10px; float:left; width:150px !important">
 	
-	<h1>{{ member.name }}</h1>
+	<h2>{{ member.name }}</h2>
 	
-	<h2>{{ member.role }}</h2>
-	
-	{% if member.github %} 
-	<span class="social-share-googleplus"><a href="https://github.com/{{ member.github }}" title="Github"><img src="{{ "/img/github-icon.png" | prepend: site.baseurl }}" style="height:20px">Github</a></span> 
-	{% endif %}
-	<!-- {% if member.url %}
-	<span class="social-share-googleplus"><a href="{{ member.url }}" title="Website"><img src="{{ "/img/url-icon.png"| prepend: site.baseurl }}" style="height:20px">Website</a></span>
-	{% endif %} -->
-	
-	</br>
+	<h3>{{ member.role }}</h3>
 
-	{% if member.bio %} 
-	{{ member.bio }}
+	{% if member.github %} 
+	<span class="social-share-googleplus"><a href="https://github.com/{{ member.github }}" title="Github" target="_blank"><img src="{{ "/img/github-icon.png" | prepend: site.baseurl }}" style="height:50px">Github</a></span> 
+	{% endif %}
+
+	{% if member.url %}
+	<span class="social-share-googleplus"><a href="{{ member.url }}" title="Website" target="_blank"><img src="{{ "/img/android-chrome-72x72.png"| prepend: site.baseurl }}" style="height:40px">Website</a></span>
+	{% endif %}
+	
+	{% if member.url %}
+	<span class="social-share-googleplus"><a href="https://twitter.com/{{ member.twitter }}" title="Twitter" target="_blank"><img src="{{ "/img/android-chrome-72x72.png"| prepend: site.baseurl }}" style="height:40px">Twitter</a></span>
 	{% endif %}
 	
 	<hr>
+
 
 {% endif %}{% endfor %}
 
