--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "About Bitcoin Cache Machine"
-header-img: "img/header.jpg"
+header-img: "img/header_v2.png"
 ---
 
 
@@ -19,9 +19,8 @@ header-img: "img/header.jpg"
     inside of a distributed Kafka cluster. You can deploy workflows against this event flow to create custom logic that
     meets your particular needs.</p>
 
-    <p  style="justify-content: center"><img src="/img/keybase_icon.png" /></p>
+<p style="justify-content: center"><img src="/img/keybase_icon.png" /></p>
 
 <p>
-    Users wanting to contribute to the project may submit pull requests for review. A <a target="_blank" rel="noopener noreferrer"
-        href="https://keybase.io/team/btccachemachine">Keybase
+    Users wanting to contribute to the project may submit pull requests for review. A <a target="_blank" rel="noopener noreferrer" href="https://keybase.io/team/btccachemachine">Keybase
         Team</a> has been created for those wanting to discuss project ideas and coordinate.”.</p>
